--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "𝚂𝙸𝙶𝙼𝙰 𝙼𝚄𝚂𝙸𝙲",
+    "name": "MESS 𝙼𝚄𝚂𝙸𝙲",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://mallucampaign.in/images/img_1710345364.jpg",
+    "logo": "https://telegra.ph/file/cdab23b37b9bec1044db9.jpg",
     "keywords": [
     "python3",
     "telegram",
